cluster-apps/rails-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-demo-service
spec:
  type: ClusterIP
  selector:
    app: rails-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
