cluster-apps/rails-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: rails-app
  name: rails-app
spec:
  rules:
    - host: 'rails-demo.framsburg.ch'
      http:
        paths:
          - path: /
            pathType: Prefix

  tls:
    - hosts: 'rails-demo.framsburg.ch'
      secretName: 'rails-demo-framsburg-ch-tls'
